--- a/pay_auto.html
+++ b/pay_auto.html
@@ -45,9 +45,9 @@ http://www.templatemo.com/tm-463-motor
             <ul>
                  <li><a href="index.html">Главная</a></li>
                  <li><a href="products.html">Авто в наличии</a></li>
-                 <li><a href="pay_auto.html">Заказать/Купить Авто</a></li>
+                 <li><a href="pay_auto.html" class="active">Заказать/Купить Авто</a></li>
                  <li><a href="sale_auto.html">Продать свой Авто</a></li>
-                 <li><a href="contact.html" class="active">Контакты</a></li>
+                 <li><a href="contact.html">Контакты</a></li>
            </ul>
          </nav> 
        </div>
@@ -57,36 +57,32 @@ http://www.templatemo.com/tm-463-motor
     <section class="container tm-contact-main">
       <div class="row">
         <div class="contact-form-container">
-          <h2 class="contact-title">Контакты</h2>
+          <h2 class="contact-title">Заказать/Купить авто</h2>
           <p></p>
           <form action="#" method="post" class="tm-contact-form">
               <div class="col-lg-5 col-md-5 contact-form-left">
                 <div class="form-group">
-                    <input type="text" id="contact_name" class="form-control" placeholder="NAME" />
+                    <input type="text" id="contact_name" class="form-control" placeholder="Имя" />
                 </div>
                 <div class="form-group">
-                    <input type="email" id="contact_email" class="form-control" placeholder="EMAIL" />
+                    <input type="email" id="contact_email" class="form-control" placeholder="Телефон" />
                 </div>
                 <div class="form-group">
-                    <input type="text" id="contact_subject" class="form-control" placeholder="SUBJECT" />
+                    <input type="text" id="contact_subject" class="form-control" placeholder="Автомобиль" />
                 </div>                
               </div>
               <div class="col-lg-7 col-md-7 contact-form-right">
                 <div class="form-group margin-bottom-0">
-                    <textarea id="contact_message" class="form-control" rows="6" placeholder="MESSAGE"></textarea>
+                    <textarea id="contact_message" class="form-control" rows="6" placeholder="Описание автомобиля, который Вы хотите приобрести"></textarea>
                 </div>
               </div>
               <div class="col-lg-12 col-md-12 submit-btn-container">
-                <button type="submit" name="submit" class="btn text-uppercase templatemo-submit-btn">Send Message</button>  
+                <button type="submit" name="submit" class="btn text-uppercase templatemo-submit-btn">Отправить сообщение</button>  
               </div>                        
           </form>
         </div>
       </div>
       <!--banner-->
-
-      <div class="row">
-        <div id="google-map"></div>
-      </div>
     </section>
 
     <!-- End Main content -->
@@ -100,9 +96,9 @@ http://www.templatemo.com/tm-463-motor
             <ul>
                  <li><a href="index.html">Главная</a></li>
                  <li><a href="products.html">Авто в наличии</a></li>
-                 <li><a href="pay_auto.html">Заказать/Купить Авто</a></li>
+                 <li><a href="pay_auto.html" class="active">Заказать/Купить Авто</a></li>
                  <li><a href="sale_auto.html">Продать свой Авто</a></li>
-                 <li><a href="contact.html" class="active">Контакты</a></li>
+                 <li><a href="contact.html">Контакты</a></li>
             </ul>
           </nav>
           <div class="col-lg-5 col-md-5 tm-footer-div">
