--- a/products.html
+++ b/products.html
@@ -27,45 +27,27 @@ http://www.templatemo.com/tm-463-motor
         <section class="templatemo-top-section">
           <div class="templatemo-header">
             <img class="templatemo-header-img" src="img/header.png" alt="Header">
-            <h1 class="templatemo-site-name">Motor</h1>
+            <h1 class="templatemo-site-name">RJ AUTO</h1>
             <div class="mobile-menu-icon">
               <i class="fa fa-bars"></i>
             </div>
             <div class="templatemo-nav-container">
               <nav class="templatemo-nav">
                 <ul>
-                 <li><a href="index.html">Home</a></li>
-                 <li><a href="products.html" class="active">Products</a></li>
-                 <li><a href="services.html">Services</a></li>
-                 <li><a href="gallery.html">Gallery</a></li>
-                 <li><a href="contact.html">Contact</a></li>
+                 <li><a href="index.html">Главная</a></li>
+                 <li><a href="products.html" class="active">Авто в наличии</a></li>
+                 <li><a href="pay_auto.html">Заказать/Купить Авто</a></li>
+                 <li><a href="sale_auto.html">Продать свой Авто</a></li>
+                 <li><a href="contact.html">Контакты</a></li>
                </ul>
              </nav> 
            </div>
          </div>
-         <div class="templatemo-welcome">
-          <div class="container">
-            <div class="row">
-              <div class="col-lg-7 col-md-7 col-sm-6 col-xs-12">
-                <img src="img/welcome-img.png" class="img-responsive welcome-img" alt="Welcome">
-              </div>
-              <div class="col-lg-5 col-md-5 col-sm-6 col-xs-12">
-                <h2 class="text-uppercase">
-                  <span class="welcome-title-1">We love your</span>
-                  <span class="welcome-title-2">satisfaction</span>
-                </h2>
-                <p class="welcome-message">Motor is free Bootstrap v3.3.4 responsive web template provided 
-                by <span class="blue">template</span><span class="green">mo</span>.com website. You can download, 
-                modify and use this for your website projects.</p>
-                <a href="#" class="welcome-read-more">Read More</a>
-              </div>
-            </div>    
-          </div>
-        </div>
       </section>
       <section class="container margin-bottom-50">
+	  
        <div class="row">
-        <h2 class="col-lg-12 text-center text-uppercase margin-bottom-30">Donec pede justo fringilla ulputate eget</h2>
+        <h2 class="col-lg-12 text-center text-uppercase margin-bottom-30">Автомобили в наличии</h2>
         <p class="col-lg-12 text-center margin-bottom-30">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec.</p>
         <div class="col-lg-12 tm-overflow-hidden">
           <div class="tm-img-1-container">
@@ -86,10 +68,18 @@ http://www.templatemo.com/tm-463-motor
           </div>         
         </div>
       </div>
+	  
+      <!--banner-->
+      <div class="tm-banner">
+        <h2 class="tm-banner-title">Фильтр поиска автомобилей</h2>
+        <p class="tm-banner-description">Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium</p>
+        <a href="#" class="tm-banner-link"><i class="fa fa-play"></i></a>
+      </div>
     </section>    
 
     <!--Main content-->
     <section class="container margin-bottom-50">
+	
       <div class="tm-overflow-hidden row">
         <div class="tm-gallery col-lg-9 col-md-9 col-sm-8 col-xs-12">
           <h3 class="tm-gallery-title">Toyota (53)</h3>          
@@ -290,34 +280,28 @@ http://www.templatemo.com/tm-463-motor
         </aside>
       </div>
 
-      <!--banner-->
-      <div class="tm-banner">
-        <h2 class="tm-banner-title">Maecenas</h2>
-        <p class="tm-banner-description">Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium</p>
-        <a href="#" class="tm-banner-link"><i class="fa fa-play"></i></a>
-      </div>
     </section> <!-- Main content -->
     <!--Footer content-->
     <footer class="tm-footer">
       <div class="container">
         <div class="row margin-bottom-60">
           <nav class="col-lg-3 col-md-3 tm-footer-nav tm-footer-div">
-            <h3 class="tm-footer-div-title">Main Menu</h3>
+            <h3 class="tm-footer-div-title">Меню</h3>
             <ul>
-              <li><a href="index.html">Home</a></li>
-              <li><a href="about.html">About Us</a></li>
-              <li><a href="gallery.html">Directory</a></li>
-              <li><a href="#">Blog</a></li>
-              <li><a href="services.html">Our Services</a></li>
+                 <li><a href="index.html">Главная</a></li>
+                 <li><a href="products.html" class="active">Авто в наличии</a></li>
+                 <li><a href="pay_auto.html">Заказать/Купить Авто</a></li>
+                 <li><a href="sale_auto.html">Продать свой Авто</a></li>
+                 <li><a href="contact.html">Контакты</a></li>
             </ul>
           </nav>
           <div class="col-lg-5 col-md-5 tm-footer-div">
-            <h3 class="tm-footer-div-title">About Us</h3>
+            <h3 class="tm-footer-div-title">О компании</h3>
             <p class="margin-top-15">Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet.</p>
             <p class="margin-top-15">Nam quam nunc, blandit vel, luctus pulvinar, hendrerit id, lorem. Maecenas nec odio et ante tincidunt tempus. Donec vitae sapien ut libero venenatis faucibus.</p>
           </div>
           <div class="col-lg-4 col-md-4 tm-footer-div">
-            <h3 class="tm-footer-div-title">Get Social</h3>
+            <h3 class="tm-footer-div-title">Соцсети</h3>
             <p>Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante.</p>
             <div class="tm-social-icons-container">
               <a href="#" class="tm-social-icon"><i class="fa fa-facebook"></i></a>
