--- a/index.html
+++ b/index.html
@@ -104,19 +104,19 @@ http://www.templatemo.com/tm-463-motor
 
       <div class="about-container-2">
         <div class="services-container-inner">
-          <h3 class="about-title-2">Three Columns</h3>
+          <h3 class="about-title-2">Услуга 1</h3>
           <img src="img/services-1.jpg" alt="Image" class="img-responsive margin-bottom-15">          
           <p class="about-description">Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
           <a href="#" class="about-link about-link-2">Details</a>
         </div>
         <div class="services-container-inner">
-          <h3 class="about-title-2">Three Columns</h3>
+          <h3 class="about-title-2">Услуга 2</h3>
           <img src="img/services-1.jpg" alt="Image" class="img-responsive margin-bottom-15">          
           <p class="about-description">Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
           <a href="#" class="about-link about-link-2">Details</a>
         </div>
         <div class="services-container-inner">
-          <h3 class="about-title-2">Three Columns</h3>
+          <h3 class="about-title-2">Услуга 3</h3>
           <img src="img/services-1.jpg" alt="Image" class="img-responsive margin-bottom-15">          
           <p class="about-description">Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
           <a href="#" class="about-link about-link-2">Details</a>
