--- a/index.html
+++ b/index.html
@@ -93,36 +93,147 @@ http://www.templatemo.com/tm-463-motor
       </section>
 
     <!--Main content-->
-    <section class="container margin-bottom-50">
+    <section class="container margin-bottom-10">
 
       <!--banner-->
-      <div class="tm-banner">
+      <div class="tm-banner margin-bottom-30">
         <h2 class="tm-banner-title">Фильтр поиска автомобилей</h2>
-        <p class="tm-banner-description">Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium</p>
+        <p class="tm-banner-description">Здесь можно будет выбрать марку авто и задать ценовой порог для поиска автомобиля</p>
         <a href="#" class="tm-banner-link"><i class="fa fa-play"></i></a>
       </div>
 
-      <div class="about-container-2">
-        <div class="services-container-inner">
-          <h3 class="about-title-2">Услуга 1</h3>
-          <img src="img/services-1.jpg" alt="Image" class="img-responsive margin-bottom-15">          
-          <p class="about-description">Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
-          <a href="#" class="about-link about-link-2">Details</a>
+
+	  
+	  <div class="tm-gallery col-lg-9 col-md-9 col-sm-8 col-xs-12">
+	  <h2 class="text-center text-uppercase margin-bottom-30">Новые автомобили</h2>
+          <div class="tm-item-container">
+            <img src="img/2.jpg" alt="Image">
+            <p class="tm-item-description">pellentesque eu, pretium quissem</p><hr>
+            <div class="tm-item-price-container">
+              <span class="tm-item-price">$ 50,000</span>
+              <a href="#" class="tm-item-link">
+                <span class="tm-item-action">Add to Cart</span>
+                <img src="img/plus.png" class="tm-item-add-icon" alt="Image">
+              </a>
+            </div>
+          </div>
+          <div class="tm-item-container">
+            <img src="img/2.jpg" alt="Image">
+            <p class="tm-item-description">pellentesque eu, pretium quissem</p><hr>
+            <div class="tm-item-price-container">
+              <span class="tm-item-price">$ 34,000</span>
+              <a href="#" class="tm-item-link">
+                <span class="tm-item-action">Add to Cart</span>
+                <img src="img/plus.png" class="tm-item-add-icon" alt="Image">
+              </a>
+            </div>   
+          </div>
+          <div class="tm-item-container">
+            <img src="img/2.jpg" alt="Image">
+            <p class="tm-item-description">pellentesque eu, pretium quissem</p><hr>
+            <div class="tm-item-price-container">
+              <span class="tm-item-price">$ 65,000</span>
+              <a href="#" class="tm-item-link">
+                <span class="tm-item-action">Add to Cart</span>
+                <img src="img/plus.png" class="tm-item-add-icon" alt="Image">
+              </a>
+            </div>         
+          </div>
+          <div class="tm-item-container">
+            <img src="img/2.jpg" alt="Image">
+            <p class="tm-item-description">pellentesque eu, pretium quissem</p><hr>
+            <div class="tm-item-price-container">
+              <span class="tm-item-price">$ 20,000</span>
+              <a href="#" class="tm-item-link">
+                <span class="tm-item-action">Add to Cart</span>
+                <img src="img/plus.png" class="tm-item-add-icon" alt="Image">
+              </a>
+            </div>            
+          </div>
+          <div class="tm-item-container">
+            <img src="img/2.jpg" alt="Image">
+            <p class="tm-item-description">pellentesque eu, pretium quissem</p><hr>
+            <div class="tm-item-price-container">
+              <span class="tm-item-price">$ 134,000</span>
+              <a href="#" class="tm-item-link">
+                <span class="tm-item-action">Add to Cart</span>
+                <img src="img/plus.png" class="tm-item-add-icon" alt="Image">
+              </a>
+            </div>            
+          </div>
+          <div class="tm-item-container">
+            <img src="img/2.jpg" alt="Image">
+            <p class="tm-item-description">pellentesque eu, pretium quissem</p><hr>
+            <div class="tm-item-price-container">
+              <span class="tm-item-price">$ 55,000</span>
+              <a href="#" class="tm-item-link">
+                <span class="tm-item-action">Add to Cart</span>
+                <img src="img/plus.png" class="tm-item-add-icon" alt="Image">
+              </a>
+            </div>            
+          </div>
         </div>
-        <div class="services-container-inner">
-          <h3 class="about-title-2">Услуга 2</h3>
-          <img src="img/services-1.jpg" alt="Image" class="img-responsive margin-bottom-15">          
-          <p class="about-description">Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
-          <a href="#" class="about-link about-link-2">Details</a>
-        </div>
-        <div class="services-container-inner">
-          <h3 class="about-title-2">Услуга 3</h3>
-          <img src="img/services-1.jpg" alt="Image" class="img-responsive margin-bottom-15">          
-          <p class="about-description">Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
-          <a href="#" class="about-link about-link-2">Details</a>
-        </div>
+		
+	  <h2 class="col-lg-3 col-md-3 col-sm-4 col-xs-12 text-center text-uppercase margin-bottom-30">Новости</h2>
+	  
+      <div class="services-container-1 col-lg-3 col-md-3 col-sm-4 col-xs-12">
+	  <div class="container">
+	  <div class="row">
+          <h3>Новость 1</h3>
+          <p>Текст</p>
+          <a href="#" class="about-link about-link-2">Подробнее</a>
+	  </div>
+	  <div class="row">
+          <h3>Новость 2</h3>
+          <p>Текст</p>
+          <a href="#" class="about-link about-link-2">Подробнее</a>
+	  </div>
+	  <div class="row">
+          <h3>Новость 2</h3>
+          <p>Текст</p>
+          <a href="#" class="about-link about-link-2">Подробнее</a>
+	  </div>
+	  </div>
       </div>
 
+    </section>
+
+    <section class="container margin-bottom-50">
+	<h2 class="text-center text-uppercase margin-bottom-30">Наши услуги</h2>
+      <div class="services-container-1">
+        <div class="services-blocks-container">
+          <div class="services-block">
+            <div class="services-header">
+              <i class="fa fa-plus services-icon"></i>
+              <h3 class="services-title-2">Morbi Accumsan</h3>  
+            </div>          
+            <p class="services-description">Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagiittis sem   nibh id elit. Duis sed odio sit amet nibh.a sit amet mauris um auctor, nisi elit. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio.</p>
+          </div>
+          <div class="services-block">
+            <div class="services-header">
+              <i class="fa fa-plus services-icon"></i>
+              <h3 class="services-title-2">Gravita Velit</h3>  
+            </div>          
+            <p class="services-description">Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagiittis sem   nibh id elit. Duis sed odio sit amet nibh.a sit amet mauris um auctor, nisi elit. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio.</p>
+          </div>                    
+        </div>
+        <div class="services-blocks-container">
+          <div class="services-block">
+            <div class="services-header">
+              <i class="fa fa-plus services-icon"></i>
+              <h3 class="services-title-2">aenean consequat</h3>  
+            </div>          
+            <p class="services-description">Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagiittis sem   nibh id elit. Duis sed odio sit amet nibh.a sit amet mauris um auctor, nisi elit. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio.</p>
+          </div>
+          <div class="services-block">
+            <div class="services-header">
+              <i class="fa fa-plus services-icon"></i>
+              <h3 class="services-title-2">duis sedodio</h3>  
+            </div>          
+            <p class="services-description">Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagiittis sem   nibh id elit. Duis sed odio sit amet nibh.a sit amet mauris um auctor, nisi elit. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio.</p>
+          </div>                    
+        </div>  
+      </div>
     </section> <!-- Main content -->
     
     <!--Footer content-->
