--- a/index.html
+++ b/index.html
@@ -178,7 +178,8 @@ http://www.templatemo.com/tm-463-motor
 	  
       <div class="services-container-1 col-lg-3 col-md-3 col-sm-4 col-xs-12">
 	  <div class="container">
-	  <div class="row">
+	  <style>.ya-news__title{font-size:100%;font-weight:700;margin-bottom:.5em}.ya-news__date{font-size:85%;margin-right:.5em}.ya-news__informer{font-size:85%;margin-bottom:.3em}.ya-news__description{font-size:85%;margin-bottom:.5em}.ya-news__all{font-size:80%;margin-top:.3em}</style><script src="//news.yandex.ru/ru/auto5.utf8.js" charset="utf-8"></script><script>(function(w,rubric){var data=w[rubric];if(!data||!data.length){return;}function formatDate(ts){var d=new Date(ts*1000);return d.getHours()+':'+('0'+d.getMinutes()).substr(-2);}var html='<div class="ya-news__title"><a href="//news.yandex.ru/" target="_blank">Яндекс.Новости</a></div>';data.sort(function(a,b){return a.date==b.date?a.time<b.time?1:a.time>b.time?-1:0:a.date<b.date?1:a.date>b.date?-1:void 0});for(var i=0;i<data.length;i++){var item=data[i];html+='<div><span class="ya-news__date">'+item.date+'&nbsp;'+item.time+'</span><span class="ya-news__title"><a href="'+item.url+'" target="_blank">'+item.title+'</a></span></div><div class="ya-news__description">'+item.descr+'</div>';}html+='<div class="ya-news__all"><a href="//news.yandex.ru/" target="_blank">Все новости на '+formatDate(w.update_time_t)+'</a></div>';document.write(html);}(window, 'm_auto'));</script>
+	  <!--<div class="row">
           <h3>Новость 1</h3>
           <p>Текст</p>
           <a href="#" class="about-link about-link-2">Подробнее</a>
@@ -193,7 +194,7 @@ http://www.templatemo.com/tm-463-motor
           <p>Текст</p>
           <a href="#" class="about-link about-link-2">Подробнее</a>
 	  </div>
-	  </div>
+	  </div>-->
       </div>
 
     </section>
