--- a/index.html
+++ b/index.html
@@ -108,66 +108,66 @@ http://www.templatemo.com/tm-463-motor
 	  <h2 class="text-center text-uppercase margin-bottom-30">Новые автомобили</h2>
           <div class="tm-item-container">
             <img src="img/2.jpg" alt="Image">
-            <p class="tm-item-description">pellentesque eu, pretium quissem</p><hr>
+            <p class="tm-item-description">Самый лучший авто в Кирове</p><hr>
             <div class="tm-item-price-container">
               <span class="tm-item-price">$ 50,000</span>
               <a href="#" class="tm-item-link">
-                <span class="tm-item-action">Add to Cart</span>
+                <span class="tm-item-action">Заказать</span>
                 <img src="img/plus.png" class="tm-item-add-icon" alt="Image">
               </a>
             </div>
           </div>
           <div class="tm-item-container">
             <img src="img/2.jpg" alt="Image">
-            <p class="tm-item-description">pellentesque eu, pretium quissem</p><hr>
+            <p class="tm-item-description">Самый лучший авто в Кирове</p><hr>
             <div class="tm-item-price-container">
               <span class="tm-item-price">$ 34,000</span>
               <a href="#" class="tm-item-link">
-                <span class="tm-item-action">Add to Cart</span>
+                <span class="tm-item-action">Заказать</span>
                 <img src="img/plus.png" class="tm-item-add-icon" alt="Image">
               </a>
             </div>   
           </div>
           <div class="tm-item-container">
             <img src="img/2.jpg" alt="Image">
-            <p class="tm-item-description">pellentesque eu, pretium quissem</p><hr>
+            <p class="tm-item-description">Самый лучший авто в Кирове</p><hr>
             <div class="tm-item-price-container">
               <span class="tm-item-price">$ 65,000</span>
               <a href="#" class="tm-item-link">
-                <span class="tm-item-action">Add to Cart</span>
+                <span class="tm-item-action">Заказать</span>
                 <img src="img/plus.png" class="tm-item-add-icon" alt="Image">
               </a>
             </div>         
           </div>
           <div class="tm-item-container">
             <img src="img/2.jpg" alt="Image">
-            <p class="tm-item-description">pellentesque eu, pretium quissem</p><hr>
+            <p class="tm-item-description">Самый лучший авто в Кирове</p><hr>
             <div class="tm-item-price-container">
               <span class="tm-item-price">$ 20,000</span>
               <a href="#" class="tm-item-link">
-                <span class="tm-item-action">Add to Cart</span>
+                <span class="tm-item-action">Заказать</span>
                 <img src="img/plus.png" class="tm-item-add-icon" alt="Image">
               </a>
             </div>            
           </div>
           <div class="tm-item-container">
             <img src="img/2.jpg" alt="Image">
-            <p class="tm-item-description">pellentesque eu, pretium quissem</p><hr>
+            <p class="tm-item-description">Самый лучший авто в Кирове</p><hr>
             <div class="tm-item-price-container">
               <span class="tm-item-price">$ 134,000</span>
               <a href="#" class="tm-item-link">
-                <span class="tm-item-action">Add to Cart</span>
+                <span class="tm-item-action">Заказать</span>
                 <img src="img/plus.png" class="tm-item-add-icon" alt="Image">
               </a>
             </div>            
           </div>
           <div class="tm-item-container">
             <img src="img/2.jpg" alt="Image">
-            <p class="tm-item-description">pellentesque eu, pretium quissem</p><hr>
+            <p class="tm-item-description">Самый лучший авто в Кирове</p><hr>
             <div class="tm-item-price-container">
               <span class="tm-item-price">$ 55,000</span>
               <a href="#" class="tm-item-link">
-                <span class="tm-item-action">Add to Cart</span>
+                <span class="tm-item-action">Заказать</span>
                 <img src="img/plus.png" class="tm-item-add-icon" alt="Image">
               </a>
             </div>            
@@ -203,32 +203,32 @@ http://www.templatemo.com/tm-463-motor
           <div class="services-block">
             <div class="services-header">
               <i class="fa fa-plus services-icon"></i>
-              <h3 class="services-title-2">Morbi Accumsan</h3>  
+              <h3 class="services-title-2">1 УСЛУГА </h3>  
             </div>          
-            <p class="services-description">Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagiittis sem   nibh id elit. Duis sed odio sit amet nibh.a sit amet mauris um auctor, nisi elit. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio.</p>
+            <p class="services-description">Описание Описание Описание Описание Описание Описание Описание Описание Описание Описание Описание Описание Описание Описание Описание Описание.</p>
           </div>
           <div class="services-block">
             <div class="services-header">
               <i class="fa fa-plus services-icon"></i>
-              <h3 class="services-title-2">Gravita Velit</h3>  
+              <h3 class="services-title-2">2 УСЛУГА </h3>  
             </div>          
-            <p class="services-description">Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagiittis sem   nibh id elit. Duis sed odio sit amet nibh.a sit amet mauris um auctor, nisi elit. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio.</p>
+            <p class="services-description">Описание Описание Описание Описание Описание Описание Описание Описание Описание Описание Описание Описание Описание Описание Описание Описание.</p>
           </div>                    
         </div>
         <div class="services-blocks-container">
           <div class="services-block">
             <div class="services-header">
               <i class="fa fa-plus services-icon"></i>
-              <h3 class="services-title-2">aenean consequat</h3>  
+              <h3 class="services-title-2">3 УСЛУГА </h3>  
             </div>          
-            <p class="services-description">Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagiittis sem   nibh id elit. Duis sed odio sit amet nibh.a sit amet mauris um auctor, nisi elit. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio.</p>
+            <p class="services-description">Описание Описание Описание Описание Описание Описание Описание Описание Описание Описание Описание Описание Описание Описание Описание Описание.</p>
           </div>
           <div class="services-block">
             <div class="services-header">
               <i class="fa fa-plus services-icon"></i>
-              <h3 class="services-title-2">duis sedodio</h3>  
+              <h3 class="services-title-2">4 УСЛУГА</h3>  
             </div>          
-            <p class="services-description">Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagiittis sem   nibh id elit. Duis sed odio sit amet nibh.a sit amet mauris um auctor, nisi elit. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio.</p>
+            <p class="services-description">Описание Описание Описание Описание Описание Описание Описание Описание Описание Описание Описание Описание Описание Описание Описание Описание.</p>
           </div>                    
         </div>  
       </div>
@@ -250,12 +250,12 @@ http://www.templatemo.com/tm-463-motor
           </nav>
           <div class="col-lg-5 col-md-5 tm-footer-div">
             <h3 class="tm-footer-div-title">О компании</h3>
-            <p class="margin-top-15">Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet.</p>
-            <p class="margin-top-15">Nam quam nunc, blandit vel, luctus pulvinar, hendrerit id, lorem. Maecenas nec odio et ante tincidunt tempus. Donec vitae sapien ut libero venenatis faucibus.</p>
+            <p class="margin-top-15">Информация о компании.</p>
+            <p class="margin-top-15">Краткое и емкое описание.</p>
           </div>
           <div class="col-lg-4 col-md-4 tm-footer-div">
             <h3 class="tm-footer-div-title">Соцсети</h3>
-            <p>Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante.</p>
+            <p>Ссылки на соцсети.</p>
             <div class="tm-social-icons-container">
               <a href="#" class="tm-social-icon"><i class="fa fa-facebook"></i></a>
               <a href="#" class="tm-social-icon"><i class="fa fa-twitter"></i></a>
