--- a/sale_auto.html
+++ b/sale_auto.html
@@ -103,12 +103,12 @@ http://www.templatemo.com/tm-463-motor
           </nav>
           <div class="col-lg-5 col-md-5 tm-footer-div">
             <h3 class="tm-footer-div-title">О компании</h3>
-            <p class="margin-top-15">Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet.</p>
-            <p class="margin-top-15">Nam quam nunc, blandit vel, luctus pulvinar, hendrerit id, lorem. Maecenas nec odio et ante tincidunt tempus. Donec vitae sapien ut libero venenatis faucibus.</p>
+            <p class="margin-top-15">Информация о компании.</p>
+            <p class="margin-top-15">Краткое и емкое описание.</p>
           </div>
           <div class="col-lg-4 col-md-4 tm-footer-div">
             <h3 class="tm-footer-div-title">Соцсети</h3>
-            <p>Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante.</p>
+            <p>Ссылки на соцсети.</p>
             <div class="tm-social-icons-container">
               <a href="#" class="tm-social-icon"><i class="fa fa-facebook"></i></a>
               <a href="#" class="tm-social-icon"><i class="fa fa-twitter"></i></a>
