--- a/index.html
+++ b/index.html
@@ -78,10 +78,10 @@ http://www.templatemo.com/tm-463-motor
                       </div>
                       <div class="col-lg-9 col-md-9 col-sm-8 col-xs-12 about-slider-description">
                         <h2 class="text-uppercase welcome-title">
-                          <span class="welcome-title-1">Find to own</span>
-                          <span class="welcome-title-2">the fast &amp; best</span>
+                          	<span class="welcome-title-1">Porshe</span>
+                      		<span class="welcome-title-2">Жажда скорости</span>
                         </h2>
-                        <p class="welcome-message">Lorem ipsum dolor sit amet, consectetuer adipiscing elit dori. Aenean commodo ligula eget. Aenean massa. Cumdent sociis natoque penatibus et magnis dis parturient montes, sor ind nascetur ridiculus mus. Lorem ipsum dolor sit amet dipiscing elit dori.</p>
+                        <p class="welcome-message"><span class="blue">Сделайте Заказ</span> и Наши специалисты подберут и привезут для Вас <span class="green">любой авто</span></p>
                       </div>              
                     </div>  
                   </li>
@@ -138,6 +138,39 @@ http://www.templatemo.com/tm-463-motor
                 <img src="img/plus.png" class="tm-item-add-icon" alt="Image">
               </a>
             </div>         
+          </div>
+          <div class="tm-item-container">
+            <img src="img/2.jpg" alt="Image">
+            <p class="tm-item-description">Самый лучший авто в Кирове</p><hr>
+            <div class="tm-item-price-container">
+              <span class="tm-item-price">$ 20,000</span>
+              <a href="#" class="tm-item-link">
+                <span class="tm-item-action">Заказать</span>
+                <img src="img/plus.png" class="tm-item-add-icon" alt="Image">
+              </a>
+            </div>            
+          </div>
+          <div class="tm-item-container">
+            <img src="img/2.jpg" alt="Image">
+            <p class="tm-item-description">Самый лучший авто в Кирове</p><hr>
+            <div class="tm-item-price-container">
+              <span class="tm-item-price">$ 134,000</span>
+              <a href="#" class="tm-item-link">
+                <span class="tm-item-action">Заказать</span>
+                <img src="img/plus.png" class="tm-item-add-icon" alt="Image">
+              </a>
+            </div>            
+          </div>
+          <div class="tm-item-container">
+            <img src="img/2.jpg" alt="Image">
+            <p class="tm-item-description">Самый лучший авто в Кирове</p><hr>
+            <div class="tm-item-price-container">
+              <span class="tm-item-price">$ 55,000</span>
+              <a href="#" class="tm-item-link">
+                <span class="tm-item-action">Заказать</span>
+                <img src="img/plus.png" class="tm-item-add-icon" alt="Image">
+              </a>
+            </div>            
           </div>
           <div class="tm-item-container">
             <img src="img/2.jpg" alt="Image">
