--- a/products.html
+++ b/products.html
@@ -48,7 +48,7 @@ http://www.templatemo.com/tm-463-motor
 	  
        <div class="row">
         <h2 class="col-lg-12 text-center text-uppercase margin-bottom-30">Автомобили в наличии</h2>
-        <p class="col-lg-12 text-center margin-bottom-30">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec.</p>
+        <p class="col-lg-12 text-center margin-bottom-30">Описание раздела.</p>
         <div class="col-lg-12 tm-overflow-hidden">
           <div class="tm-img-1-container">
             <img src="img/0.jpg" alt="Image description">
@@ -72,7 +72,7 @@ http://www.templatemo.com/tm-463-motor
       <!--banner-->
       <div class="tm-banner">
         <h2 class="tm-banner-title">Фильтр поиска автомобилей</h2>
-        <p class="tm-banner-description">Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium</p>
+        <p class="tm-banner-description">Здесь можно будет выбрать марку авто и задать ценовой порог для поиска автомобиля</p>
         <a href="#" class="tm-banner-link"><i class="fa fa-play"></i></a>
       </div>
     </section>    
@@ -185,7 +185,7 @@ http://www.templatemo.com/tm-463-motor
         </div>
         <aside class="tm-gallery-aside col-lg-3 col-md-3 col-sm-4 col-xs-12">
           <nav class="tm-gallery-nav">
-            <h2 class="tm-gallery-nav-title">Category <i class="fa fa-caret-up"></i></h2>
+            <h2 class="tm-gallery-nav-title">Бренды <i class="fa fa-caret-up"></i></h2>
             <ul>
               <li class="active">
                 <a href="#">
@@ -274,7 +274,7 @@ http://www.templatemo.com/tm-463-motor
             </ul>
           </nav>
           <div class="tm-call-us">
-            <h3 class="text-uppercase tm-call-us-title">Call us</h3>
+            <h3 class="text-uppercase tm-call-us-title">Горячая линия</h3>
             <a href="tel:" class="tm-call-us-link">+11 565 789 57</a>
           </div>    
         </aside>
