--- a/contact.html
+++ b/contact.html
@@ -58,22 +58,25 @@ http://www.templatemo.com/tm-463-motor
       <div class="row">
         <div class="contact-form-container">
           <h2 class="contact-title">Контакты</h2>
+		  <h3>Адрес</h3>
+		  <h3>Телефон</h3>
+		  <h3>Обратная связь</h3>
           <p></p>
           <form action="#" method="post" class="tm-contact-form">
               <div class="col-lg-5 col-md-5 contact-form-left">
                 <div class="form-group">
-                    <input type="text" id="contact_name" class="form-control" placeholder="NAME" />
+                    <input type="text" id="contact_name" class="form-control" placeholder="ИМЯ" />
                 </div>
                 <div class="form-group">
                     <input type="email" id="contact_email" class="form-control" placeholder="EMAIL" />
                 </div>
                 <div class="form-group">
-                    <input type="text" id="contact_subject" class="form-control" placeholder="SUBJECT" />
+                    <input type="text" id="contact_subject" class="form-control" placeholder="ТЕЛЕФОН" />
                 </div>                
               </div>
               <div class="col-lg-7 col-md-7 contact-form-right">
                 <div class="form-group margin-bottom-0">
-                    <textarea id="contact_message" class="form-control" rows="6" placeholder="MESSAGE"></textarea>
+                    <textarea id="contact_message" class="form-control" rows="6" placeholder="СООБЩЕНИЕ"></textarea>
                 </div>
               </div>
               <div class="col-lg-12 col-md-12 submit-btn-container">
@@ -85,6 +88,7 @@ http://www.templatemo.com/tm-463-motor
       <!--banner-->
 
       <div class="row">
+	  	<h3 class="about-title-2">Схема проезда</h3>
         <div id="google-map"></div>
       </div>
     </section>
