--- a/contact.html
+++ b/contact.html
@@ -80,7 +80,7 @@ http://www.templatemo.com/tm-463-motor
                 </div>
               </div>
               <div class="col-lg-12 col-md-12 submit-btn-container">
-                <button type="submit" name="submit" class="btn text-uppercase templatemo-submit-btn">Send Message</button>  
+                <button type="submit" name="submit" class="btn text-uppercase templatemo-submit-btn">ОТПРАВИТЬ СООБЩЕНИЕ</button>  
               </div>                        
           </form>
         </div>
