--- a/auto/index.html
+++ b/auto/index.html
@@ -105,7 +105,7 @@ http://www.templatemo.com/tm-463-motor
 
 	  
 	  <div class="tm-gallery col-lg-9 col-md-9 col-sm-8 col-xs-12">
-	  <h2 class="text-center text-uppercase margin-bottom-30">Новые автомобили</h2>
+	  <h2 class="text-center text-uppercase margin-bottom-30">Продажа автомобилей</h2>
           <div class="tm-item-container">
             <img src="img/2.jpg" alt="Image">
             <p class="tm-item-description">Самый лучший авто в Кирове</p><hr>
