--- a/auto/pay_auto.html
+++ b/auto/pay_auto.html
@@ -38,8 +38,7 @@ http://www.templatemo.com/tm-463-motor
         <img class="templatemo-header-img" src="img/header.png" alt="Header">
         <h1 class="templatemo-site-name">RJ AUTO</h1>
         <div class="mobile-menu-icon">
-          <i class="fa fa-bars"></i>
-        </div>
+          <i class="fa fa-bars"></i>        </div>
         <div class="templatemo-nav-container">
           <nav class="templatemo-nav">
             <ul>
@@ -58,7 +57,7 @@ http://www.templatemo.com/tm-463-motor
       <div class="row">
         <div class="contact-form-container">
           <h2 class="contact-title">Заказать/Купить авто</h2>
-          <p></p>
+          <p>Здесь Вы можете оставить заявку на автомобиль, который Вы хотели бы приобресть, можете указать несколько вариантов.</p>
           <form action="#" method="post" class="tm-contact-form">
               <div class="col-lg-5 col-md-5 contact-form-left">
                 <div class="form-group">
@@ -79,6 +78,99 @@ http://www.templatemo.com/tm-463-motor
               <div class="col-lg-12 col-md-12 submit-btn-container">
                 <button type="submit" name="submit" class="btn text-uppercase templatemo-submit-btn">Отправить сообщение</button>  
               </div>                        
+
+<div class="tm-gallery col-lg-12 col-md-12">
+	  <h2 class="text-center text-uppercase margin-bottom-30">Новые авто в продаже</h2>
+          <div class="tm-item-container tm-item-container-210">
+            <img src="img/2.jpg" alt="Image">
+            <p class="tm-item-description">Самый лучший авто в Кирове</p><hr>
+            <div class="tm-item-price-container">
+              <span class="tm-item-price">$ 50,000</span>
+              <a href="#" class="tm-item-link">
+                <span class="tm-item-action">Заказать</span>
+                <img src="img/plus.png" class="tm-item-add-icon" alt="Image">
+              </a>
+            </div>
+          </div>
+          <div class="tm-item-container tm-item-container-210">
+            <img src="img/2.jpg" alt="Image">
+            <p class="tm-item-description">Самый лучший авто в Кирове</p><hr>
+            <div class="tm-item-price-container">
+              <span class="tm-item-price">$ 34,000</span>
+              <a href="#" class="tm-item-link">
+                <span class="tm-item-action">Заказать</span>
+                <img src="img/plus.png" class="tm-item-add-icon" alt="Image">
+              </a>
+            </div>   
+          </div>
+          <div class="tm-item-container tm-item-container-210">
+            <img src="img/2.jpg" alt="Image">
+            <p class="tm-item-description">Самый лучший авто в Кирове</p><hr>
+            <div class="tm-item-price-container">
+              <span class="tm-item-price">$ 65,000</span>
+              <a href="#" class="tm-item-link">
+                <span class="tm-item-action">Заказать</span>
+                <img src="img/plus.png" class="tm-item-add-icon" alt="Image">
+              </a>
+            </div>         
+          </div>
+          <div class="tm-item-container tm-item-container-210">
+            <img src="img/2.jpg" alt="Image">
+            <p class="tm-item-description">Самый лучший авто в Кирове</p><hr>
+            <div class="tm-item-price-container">
+              <span class="tm-item-price">$ 20,000</span>
+              <a href="#" class="tm-item-link">
+                <span class="tm-item-action">Заказать</span>
+                <img src="img/plus.png" class="tm-item-add-icon" alt="Image">
+              </a>
+            </div>            
+          </div>
+          <div class="tm-item-container tm-item-container-210">
+            <img src="img/2.jpg" alt="Image">
+            <p class="tm-item-description">Самый лучший авто в Кирове</p><hr>
+            <div class="tm-item-price-container">
+              <span class="tm-item-price">$ 134,000</span>
+              <a href="#" class="tm-item-link">
+                <span class="tm-item-action">Заказать</span>
+                <img src="img/plus.png" class="tm-item-add-icon" alt="Image">
+              </a>
+            </div>            
+          </div>
+          <div class="tm-item-container tm-item-container-210">
+            <img src="img/2.jpg" alt="Image">
+            <p class="tm-item-description">Самый лучший авто в Кирове</p><hr>
+            <div class="tm-item-price-container">
+              <span class="tm-item-price">$ 55,000</span>
+              <a href="#" class="tm-item-link">
+                <span class="tm-item-action">Заказать</span>
+                <img src="img/plus.png" class="tm-item-add-icon" alt="Image">
+              </a>
+            </div>            
+          </div>
+          <div class="tm-item-container tm-item-container-210">
+            <img src="img/2.jpg" alt="Image">
+            <p class="tm-item-description">Самый лучший авто в Кирове</p><hr>
+            <div class="tm-item-price-container">
+              <span class="tm-item-price">$ 20,000</span>
+              <a href="#" class="tm-item-link">
+                <span class="tm-item-action">Заказать</span>
+                <img src="img/plus.png" class="tm-item-add-icon" alt="Image">
+              </a>
+            </div>            
+          </div>
+          <div class="tm-item-container tm-item-container-210">
+            <img src="img/2.jpg" alt="Image">
+            <p class="tm-item-description">Самый лучший авто в Кирове</p><hr>
+            <div class="tm-item-price-container">
+              <span class="tm-item-price">$ 134,000</span>
+              <a href="#" class="tm-item-link">
+                <span class="tm-item-action">Заказать</span>
+                <img src="img/plus.png" class="tm-item-add-icon" alt="Image">
+              </a>
+            </div>            
+          </div>
+        </div>
+
           </form>
         </div>
       </div>
@@ -114,8 +206,7 @@ http://www.templatemo.com/tm-463-motor
               <a href="#" class="tm-social-icon"><i class="fa fa-twitter"></i></a>
               <a href="#" class="tm-social-icon"><i class="fa fa-linkedin"></i></a>
               <a href="#" class="tm-social-icon"><i class="fa fa-youtube"></i></a>
-              <a href="#" class="tm-social-icon"><i class="fa fa-behance"></i></a>
-            </div>
+              <a href="#" class="tm-social-icon"><i class="fa fa-behance"></i></a>            </div>
           </div>
         </div>
         <div class="row tm-copyright">
