--- a/auto/products.html
+++ b/auto/products.html
@@ -27,7 +27,7 @@ http://www.templatemo.com/tm-463-motor
         <section class="templatemo-top-section">
           <div class="templatemo-header">
             <img class="templatemo-header-img" src="img/header.png" alt="Header">
-            <h1 class="templatemo-site-name">RJ AUTO</h1>
+            <a href="index.html"><h1 class="templatemo-site-name">RJ AUTO</h1></a>
             <div class="mobile-menu-icon">
               <i class="fa fa-bars"></i>
             </div>
