--- a/auto/sale_auto.html
+++ b/auto/sale_auto.html
@@ -36,7 +36,7 @@ http://www.templatemo.com/tm-463-motor
     <section class="templatemo-top-section" style="background-size: 100% 198px;">
       <div class="templatemo-header">
         <img class="templatemo-header-img" src="img/header.png" alt="Header">
-        <h1 class="templatemo-site-name">RJ AUTO</h1>
+        <a href="index.html"><h1 class="templatemo-site-name">RJ AUTO</h1></a>
         <div class="mobile-menu-icon">
           <i class="fa fa-bars"></i>
         </div>
