--- a/auto/products.html
+++ b/auto/products.html
@@ -49,7 +49,7 @@ http://www.templatemo.com/tm-463-motor
        <div class="row">
         <h2 class="col-lg-12 text-center text-uppercase margin-bottom-30">Автомобили в наличии</h2>
         <p class="col-lg-12 text-center margin-bottom-30">Описание раздела.</p>
-        <div class="col-lg-12 tm-overflow-hidden">
+        <!--<div class="col-lg-12 tm-overflow-hidden">
           <div class="tm-img-1-container">
             <img src="img/0.jpg" alt="Image description">
             <p class="tm-img-1-description">Porsche</p>
@@ -66,7 +66,7 @@ http://www.templatemo.com/tm-463-motor
             <img src="img/1.jpg" alt="Image description">
             <p class="tm-img-1-description">Lexus</p>
           </div>         
-        </div>
+        </div>-->
       </div>
 	  
       <!--banner-->
