--- a/football2/index_bg.html
+++ b/football2/index_bg.html
@@ -19,7 +19,7 @@ Licence URI: https://www.os-templates.com/template-terms
 <!-- ################################################################################################ -->
 <!-- ################################################################################################ -->
 <div class="wrapper row1">
-  <header id="header" class="hoc clear">
+  <header id="header" class="hoc clear" style="background: rgba(255, 255, 255, 0.5);">
     <section> 
       <!-- ################################################################################################ -->
       <div><i class="fa fa-phone"></i> * (***) *******</div>
