--- a/football2/pages/zenit-perevyol-match-v-dopolnitelnoe-vremya.html
+++ b/football2/pages/zenit-perevyol-match-v-dopolnitelnoe-vremya.html
@@ -1,11 +1,11 @@
-
+п»ї
 <!DOCTYPE html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8, width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" /> 
-<title>«Зенит» перевёл матч в дополнительное время. - Федерация Футбола Республики Калмыкия</title>
+<title>В«Р—РµРЅРёС‚В» РїРµСЂРµРІС‘Р» РјР°С‚С‡ РІ РґРѕРїРѕР»РЅРёС‚РµР»СЊРЅРѕРµ РІСЂРµРјСЏ. - Р¤РµРґРµСЂР°С†РёСЏ Р¤СѓС‚Р±РѕР»Р° Р РµСЃРїСѓР±Р»РёРєРё РљР°Р»РјС‹РєРёСЏ</title>
 
-<meta name="keywords" content="«Зенит» перевёл матч в дополнительное время." />
-<meta name="description" content="«Зенит» сумел забить четыре гола в ответном матче 3-го квалификационного раунда Лиги Европы с минским «Динамо». Встреча в эти минуты проходит в Санкт-Петербурге на стадионе «Петровский»." />
+<meta name="keywords" content="В«Р—РµРЅРёС‚В» РїРµСЂРµРІС‘Р» РјР°С‚С‡ РІ РґРѕРїРѕР»РЅРёС‚РµР»СЊРЅРѕРµ РІСЂРµРјСЏ." />
+<meta name="description" content="В«Р—РµРЅРёС‚В» СЃСѓРјРµР» Р·Р°Р±РёС‚СЊ С‡РµС‚С‹СЂРµ РіРѕР»Р° РІ РѕС‚РІРµС‚РЅРѕРј РјР°С‚С‡Рµ 3-РіРѕ РєРІР°Р»РёС„РёРєР°С†РёРѕРЅРЅРѕРіРѕ СЂР°СѓРЅРґР° Р›РёРіРё Р•РІСЂРѕРїС‹ СЃ РјРёРЅСЃРєРёРј В«Р”РёРЅР°РјРѕВ». Р’СЃС‚СЂРµС‡Р° РІ СЌС‚Рё РјРёРЅСѓС‚С‹ РїСЂРѕС…РѕРґРёС‚ РІ РЎР°РЅРєС‚-РџРµС‚РµСЂР±СѓСЂРіРµ РЅР° СЃС‚Р°РґРёРѕРЅРµ В«РџРµС‚СЂРѕРІСЃРєРёР№В»." />
 <link href="../layout/styles/layout.css" rel="stylesheet" type="text/css" media="all">
 </head>
 <body id="top">
@@ -15,14 +15,14 @@
       <!-- ################################################################################################ -->
       <div><i class="fa fa-phone"></i>* (***) *******</div>
       <div>
-        <h1 id="logo"><a href="index.html">ЛОГОТИПЫ</a></h1>
+        <h1 id="logo"><a href="index.html">Р›РћР“РћРўРРџР«</a></h1>
       </div>
       <div>
         <form class="clear" method="post" action="#">
           <fieldset>
-            <legend>Поиск:</legend>
-            <input type="search" value="" placeholder="Введите слово&hellip;">
-            <button class="fa fa-search" type="submit" title="Искать"><em>Искать</em></button>
+            <legend>РџРѕРёСЃРє:</legend>
+            <input type="search" value="" placeholder="Р’РІРµРґРёС‚Рµ СЃР»РѕРІРѕ&hellip;">
+            <button class="fa fa-search" type="submit" title="РСЃРєР°С‚СЊ"><em>РСЃРєР°С‚СЊ</em></button>
           </fieldset>
         </form>
       </div>
@@ -30,21 +30,21 @@
     </section>
     <nav id="mainav"> 
       <!-- ################################################################################################ -->
-      <ul class="clear"><li ><a class="" href="http://ffrk08/" title="Главная">Главная</a></li>
-<li  class="active"><a class="drop" href="/novosti.html" title="Новости">Новости</a><ul><li ><a class="" href="/novosti/naznachenie-sudej.html" title="Назначение судей">Назначение судей</a></li>
-<li  class="last active"><a class="" href="/novosti/rezultaty.html" title="Результаты">Результаты</a></li>
+      <ul class="clear"><li ><a class="" href="http://ffrk08/" title="Р“Р»Р°РІРЅР°СЏ">Р“Р»Р°РІРЅР°СЏ</a></li>
+<li  class="active"><a class="drop" href="/novosti.html" title="РќРѕРІРѕСЃС‚Рё">РќРѕРІРѕСЃС‚Рё</a><ul><li ><a class="" href="/novosti/naznachenie-sudej.html" title="РќР°Р·РЅР°С‡РµРЅРёРµ СЃСѓРґРµР№">РќР°Р·РЅР°С‡РµРЅРёРµ СЃСѓРґРµР№</a></li>
+<li  class="last active"><a class="" href="/novosti/rezultaty.html" title="Р РµР·СѓР»СЊС‚Р°С‚С‹">Р РµР·СѓР»СЊС‚Р°С‚С‹</a></li>
 </ul></li>
-<li ><a class="drop" href="/turniry.html" title="Турниры">Турниры</a><ul><li ><a class="" href="/turniry/chempionat.html" title="Чемпионат">Чемпионат</a></li>
-<li ><a class="" href="/turniry/kubok.html" title="Кубок">Кубок</a></li>
-<li ><a class="" href="/turniry/minifutbol.html" title="Минифутбол">Минифутбол</a></li>
-<li ><a class="" href="/turniry/futbol-8h8.html" title="Футбол 8х8">Футбол 8х8</a></li>
-<li  class="last"><a class="" href="/turniry/detsko-yunosheskij-futbol.html" title="Детско-Юношеский футбол">Детско-Юношеский футбол</a></li>
+<li ><a class="drop" href="/turniry.html" title="РўСѓСЂРЅРёСЂС‹">РўСѓСЂРЅРёСЂС‹</a><ul><li ><a class="" href="/turniry/chempionat.html" title="Р§РµРјРїРёРѕРЅР°С‚">Р§РµРјРїРёРѕРЅР°С‚</a></li>
+<li ><a class="" href="/turniry/kubok.html" title="РљСѓР±РѕРє">РљСѓР±РѕРє</a></li>
+<li ><a class="" href="/turniry/minifutbol.html" title="РњРёРЅРёС„СѓС‚Р±РѕР»">РњРёРЅРёС„СѓС‚Р±РѕР»</a></li>
+<li ><a class="" href="/turniry/futbol-8h8.html" title="Р¤СѓС‚Р±РѕР» 8С…8">Р¤СѓС‚Р±РѕР» 8С…8</a></li>
+<li  class="last"><a class="" href="/turniry/detsko-yunosheskij-futbol.html" title="Р”РµС‚СЃРєРѕ-Р®РЅРѕС€РµСЃРєРёР№ С„СѓС‚Р±РѕР»">Р”РµС‚СЃРєРѕ-Р®РЅРѕС€РµСЃРєРёР№ С„СѓС‚Р±РѕР»</a></li>
 </ul></li>
-<li ><a class="" href="/sudejsko-inspektorskij-korpus.html" title="Судейско-инспекторский корпус">Судейско-инспекторский корпус</a></li>
-<li ><a class="drop" href="/media.html" title="Медиа">Медиа</a><ul><li ><a class="" href="/media/foto.html" title="Фотоальбомы">Фотоальбомы</a></li>
-<li  class="last"><a class="" href="/media/video.html" title="Видео">Видео</a></li>
+<li ><a class="" href="/sudejsko-inspektorskij-korpus.html" title="РЎСѓРґРµР№СЃРєРѕ-РёРЅСЃРїРµРєС‚РѕСЂСЃРєРёР№ РєРѕСЂРїСѓСЃ">РЎСѓРґРµР№СЃРєРѕ-РёРЅСЃРїРµРєС‚РѕСЂСЃРєРёР№ РєРѕСЂРїСѓСЃ</a></li>
+<li ><a class="drop" href="/media.html" title="РњРµРґРёР°">РњРµРґРёР°</a><ul><li ><a class="" href="/media/foto.html" title="Р¤РѕС‚РѕР°Р»СЊР±РѕРјС‹">Р¤РѕС‚РѕР°Р»СЊР±РѕРјС‹</a></li>
+<li  class="last"><a class="" href="/media/video.html" title="Р’РёРґРµРѕ">Р’РёРґРµРѕ</a></li>
 </ul></li>
-<li  class="last"><a class="" href="/dokumenty.html" title="Документы">Документы</a></li>
+<li  class="last"><a class="" href="/dokumenty.html" title="Р”РѕРєСѓРјРµРЅС‚С‹">Р”РѕРєСѓРјРµРЅС‚С‹</a></li>
 </ul>
       <!-- ################################################################################################ -->
     </nav>
@@ -56,13 +56,13 @@
     <!-- ################################################################################################ -->
     <ul>
     
-      <li><a href="/" title="Главная">Главная</a></li>
-      <li><a href="/novosti.html" title="Новости">Новости</a></li>
-      <li><a href="/novosti/rezultaty.html" title="Результаты">Результаты</a></li>
-      <li><a href="/novosti/rezultaty/zenit-perevyol-match-v-dopolnitelnoe-vremya.html" title="«Зенит» перевёл матч в дополнительное время.">«Зенит» перевёл матч в дополнительное время.</a></li>
+      <li><a href="/" title="Р“Р»Р°РІРЅР°СЏ">Р“Р»Р°РІРЅР°СЏ</a></li>
+      <li><a href="/novosti.html" title="РќРѕРІРѕСЃС‚Рё">РќРѕРІРѕСЃС‚Рё</a></li>
+      <li><a href="/novosti/rezultaty.html" title="Р РµР·СѓР»СЊС‚Р°С‚С‹">Р РµР·СѓР»СЊС‚Р°С‚С‹</a></li>
+      <li><a href="/novosti/rezultaty/zenit-perevyol-match-v-dopolnitelnoe-vremya.html" title="В«Р—РµРЅРёС‚В» РїРµСЂРµРІС‘Р» РјР°С‚С‡ РІ РґРѕРїРѕР»РЅРёС‚РµР»СЊРЅРѕРµ РІСЂРµРјСЏ.">В«Р—РµРЅРёС‚В» РїРµСЂРµРІС‘Р» РјР°С‚С‡ РІ РґРѕРїРѕР»РЅРёС‚РµР»СЊРЅРѕРµ РІСЂРµРјСЏ.</a></li>
     </ul>
     <!-- ################################################################################################ -->
-    <h6 class="heading">«Зенит» перевёл матч в дополнительное время.</h6>
+    <h6 class="heading">В«Р—РµРЅРёС‚В» РїРµСЂРµРІС‘Р» РјР°С‚С‡ РІ РґРѕРїРѕР»РЅРёС‚РµР»СЊРЅРѕРµ РІСЂРµРјСЏ.</h6>
     <!-- ################################################################################################ -->
   </section>
   <main class="hoc clear"> 
@@ -71,12 +71,12 @@
     <div class="content three_quarter first"> 
       <!-- ################################################################################################ -->
 		<div class="content container"> 
-		  <div class="thumbs"><a href="assets/images/news_resultaty/zenit-foto.jpg" data-fancybox="images" data-caption="" title=""><img class="imgr borderedbox inspace-5" src="assets/images/news_resultaty/s_zenit-foto.jpg" alt="Посмотреть "></a></div>
-		  <p>&laquo;Зенит&raquo; сумел забить четыре гола в ответном матче 3-го квалификационного раунда Лиги Европы с минским &laquo;Динамо&raquo;. Встреча в эти минуты проходит в Санкт-Петербурге на стадионе &laquo;Петровский&raquo;.</p>
-<p>Автором первого мяча стал полузащитник&nbsp;<b><a href="https://www.championat.com/tags/24880-leandro-paredes/">Леандро Паредес</a></b>, отличившийся на 22-й минуте. После перерыва голы на свой счёт записали хавбек&nbsp;<b>Кристиан Нобоа</b>&nbsp;и нападающий&nbsp;<b>Артём Дзюба</b>, оформивший дубль.</p>
-<p>&laquo;Зенит&raquo; перевёл матч в дополнительное время. &laquo;Чемпионат&raquo; проводит&nbsp;<a href="https://www.championat.com/football/_europeleague/2607/match/731829.html#text-all">текстовую онлайн-трансляцию</a>&nbsp;встречи.</p>
-<p>Напомним, в первой игре, которая прошла в Минске на стадионе &laquo;Динамо&raquo; 9 августа, &laquo;Зенит&raquo; потерпел сокрушительное поражение со счётом 0:4.</p>
-<p>Победитель сегодняшнего матча в плей-офф квалификации Лиги Европы встретится с норвежским &laquo;Мольде&raquo;.</p>
+		  <div class="thumbs"><a href="assets/images/news_resultaty/zenit-foto.jpg" data-fancybox="images" data-caption="" title=""><img class="imgr borderedbox inspace-5" src="assets/images/news_resultaty/s_zenit-foto.jpg" alt="РџРѕСЃРјРѕС‚СЂРµС‚СЊ "></a></div>
+		  <p>&laquo;Р—РµРЅРёС‚&raquo; СЃСѓРјРµР» Р·Р°Р±РёС‚СЊ С‡РµС‚С‹СЂРµ РіРѕР»Р° РІ РѕС‚РІРµС‚РЅРѕРј РјР°С‚С‡Рµ 3-РіРѕ РєРІР°Р»РёС„РёРєР°С†РёРѕРЅРЅРѕРіРѕ СЂР°СѓРЅРґР° Р›РёРіРё Р•РІСЂРѕРїС‹ СЃ РјРёРЅСЃРєРёРј &laquo;Р”РёРЅР°РјРѕ&raquo;. Р’СЃС‚СЂРµС‡Р° РІ СЌС‚Рё РјРёРЅСѓС‚С‹ РїСЂРѕС…РѕРґРёС‚ РІ РЎР°РЅРєС‚-РџРµС‚РµСЂР±СѓСЂРіРµ РЅР° СЃС‚Р°РґРёРѕРЅРµ &laquo;РџРµС‚СЂРѕРІСЃРєРёР№&raquo;.</p>
+<p>РђРІС‚РѕСЂРѕРј РїРµСЂРІРѕРіРѕ РјСЏС‡Р° СЃС‚Р°Р» РїРѕР»СѓР·Р°С‰РёС‚РЅРёРє&nbsp;<b><a href="https://www.championat.com/tags/24880-leandro-paredes/">Р›РµР°РЅРґСЂРѕ РџР°СЂРµРґРµСЃ</a></b>, РѕС‚Р»РёС‡РёРІС€РёР№СЃСЏ РЅР° 22-Р№ РјРёРЅСѓС‚Рµ. РџРѕСЃР»Рµ РїРµСЂРµСЂС‹РІР° РіРѕР»С‹ РЅР° СЃРІРѕР№ СЃС‡С‘С‚ Р·Р°РїРёСЃР°Р»Рё С…Р°РІР±РµРє&nbsp;<b>РљСЂРёСЃС‚РёР°РЅ РќРѕР±РѕР°</b>&nbsp;Рё РЅР°РїР°РґР°СЋС‰РёР№&nbsp;<b>РђСЂС‚С‘Рј Р”Р·СЋР±Р°</b>, РѕС„РѕСЂРјРёРІС€РёР№ РґСѓР±Р»СЊ.</p>
+<p>&laquo;Р—РµРЅРёС‚&raquo; РїРµСЂРµРІС‘Р» РјР°С‚С‡ РІ РґРѕРїРѕР»РЅРёС‚РµР»СЊРЅРѕРµ РІСЂРµРјСЏ. &laquo;Р§РµРјРїРёРѕРЅР°С‚&raquo; РїСЂРѕРІРѕРґРёС‚&nbsp;<a href="https://www.championat.com/football/_europeleague/2607/match/731829.html#text-all">С‚РµРєСЃС‚РѕРІСѓСЋ РѕРЅР»Р°Р№РЅ-С‚СЂР°РЅСЃР»СЏС†РёСЋ</a>&nbsp;РІСЃС‚СЂРµС‡Рё.</p>
+<p>РќР°РїРѕРјРЅРёРј, РІ РїРµСЂРІРѕР№ РёРіСЂРµ, РєРѕС‚РѕСЂР°СЏ РїСЂРѕС€Р»Р° РІ РњРёРЅСЃРєРµ РЅР° СЃС‚Р°РґРёРѕРЅРµ &laquo;Р”РёРЅР°РјРѕ&raquo; 9 Р°РІРіСѓСЃС‚Р°, &laquo;Р—РµРЅРёС‚&raquo; РїРѕС‚РµСЂРїРµР» СЃРѕРєСЂСѓС€РёС‚РµР»СЊРЅРѕРµ РїРѕСЂР°Р¶РµРЅРёРµ СЃРѕ СЃС‡С‘С‚РѕРј 0:4.</p>
+<p>РџРѕР±РµРґРёС‚РµР»СЊ СЃРµРіРѕРґРЅСЏС€РЅРµРіРѕ РјР°С‚С‡Р° РІ РїР»РµР№-РѕС„С„ РєРІР°Р»РёС„РёРєР°С†РёРё Р›РёРіРё Р•РІСЂРѕРїС‹ РІСЃС‚СЂРµС‚РёС‚СЃСЏ СЃ РЅРѕСЂРІРµР¶СЃРєРёРј &laquo;РњРѕР»СЊРґРµ&raquo;.</p>
 		</div>
       <!-- ################################################################################################ -->
       <!-- ################################################################################################ -->
@@ -84,55 +84,55 @@
     <!-- ################################################################################################ -->
     <div class="sidebar one_quarter"> 
       <!-- ################################################################################################ -->
-      <h1>Таблица Турниров</h1>
+      <h1>РўР°Р±Р»РёС†Р° РўСѓСЂРЅРёСЂРѕРІ</h1>
       <div class="scrollable">
 		  <table>
 <thead>
 <tr>
-<th>М</th>
-<th>Команда</th>
-<th>И</th>
-<th>О</th>
+<th>Рњ</th>
+<th>РљРѕРјР°РЅРґР°</th>
+<th>Р</th>
+<th>Рћ</th>
 </tr>
 </thead>
 <tbody>
 <tr>
 <td>1</td>
-<td>Команда 1</td>
+<td>РљРѕРјР°РЅРґР° 1</td>
 <td>9</td>
 <td>24</td>
 </tr>
 <tr>
 <td>2</td>
-<td>Команда 2</td>
+<td>РљРѕРјР°РЅРґР° 2</td>
 <td>8</td>
 <td>22</td>
 </tr>
 <tr>
 <td>3</td>
-<td>Команда 3</td>
+<td>РљРѕРјР°РЅРґР° 3</td>
 <td>8</td>
 <td>18</td>
 </tr>
 <tr>
 <td>4</td>
-<td><a href="#">Команда 4</a></td>
+<td><a href="#">РљРѕРјР°РЅРґР° 4</a></td>
 <td>9</td>
 <td>4</td>
 </tr>
 <tr>
 <td>6</td>
-<td>Команда 5</td>
+<td>РљРѕРјР°РЅРґР° 5</td>
 <td>5</td>
 <td>3</td>
 </tr>
 </tbody>
 </table>
       </div>
-      <h6>Партнеры</h6>
+      <h6>РџР°СЂС‚РЅРµСЂС‹</h6>
       <nav class="sdb_holder">
         <ul>
-<li><a href="https://www.rfs.ru/">РОССИЙСКИЙ ФУТБОЛЬНЫЙ СОЮЗ</a></li>
+<li><a href="https://www.rfs.ru/">Р РћРЎРЎРР™РЎРљРР™ Р¤РЈРўР‘РћР›Р¬РќР«Р™ РЎРћР®Р—</a></li>
 <li><a href="#">2</a></li>
 </ul>
       </nav>
@@ -146,11 +146,11 @@
   <footer id="footer" class="hoc clear"> 
     <!-- ################################################################################################ -->
     <div class="one_quarter first">
-      <h6 class="heading">Контакты</h6>
+      <h6 class="heading">РљРѕРЅС‚Р°РєС‚С‹</h6>
       <ul class="nospace btmspace-30 linklist contact">
         <li><i class="fa fa-map-marker"></i>
           <address>
-          Адрес
+          РђРґСЂРµСЃ
           </address>
         </li>
         <li><i class="fa fa-phone"></i> * (***) *******</li>
@@ -163,23 +163,23 @@
       </ul>
     </div>
     <div class="one_half">
-      <h6 class="heading">Описание федерации</h6>
+      <h6 class="heading">РћРїРёСЃР°РЅРёРµ С„РµРґРµСЂР°С†РёРё</h6>
       <article class="btmspace-30">
-        <p>Краткое и емкое Описание федерации</p>
+        <p>РљСЂР°С‚РєРѕРµ Рё РµРјРєРѕРµ РћРїРёСЃР°РЅРёРµ С„РµРґРµСЂР°С†РёРё</p>
       </article>
       <article>
-        <h6 class="nospace font-x1">Схема проезда</h6>
-        <p>Схема</p>
+        <h6 class="nospace font-x1">РЎС…РµРјР° РїСЂРѕРµР·РґР°</h6>
+        <p>РЎС…РµРјР°</p>
       </article>
     </div>
     <div class="one_quarter">
-      <h6 class="heading">Разделы сайта</h6>
-      <ul class="nospace linklist"><li><a href="http://ffrk08/" title="Главная">Главная</a></li>
-<li><a href="/novosti.html" title="Новости">Новости</a></li>
-<li><a href="/turniry.html" title="Турниры">Турниры</a></li>
-<li><a href="/sudejsko-inspektorskij-korpus.html" title="Судейско-инспекторский корпус">Судейско-инспекторский корпус</a></li>
-<li><a href="/media.html" title="Медиа">Медиа</a></li>
-<li><a href="/dokumenty.html" title="Документы">Документы</a></li>
+      <h6 class="heading">Р Р°Р·РґРµР»С‹ СЃР°Р№С‚Р°</h6>
+      <ul class="nospace linklist"><li><a href="http://ffrk08/" title="Р“Р»Р°РІРЅР°СЏ">Р“Р»Р°РІРЅР°СЏ</a></li>
+<li><a href="/novosti.html" title="РќРѕРІРѕСЃС‚Рё">РќРѕРІРѕСЃС‚Рё</a></li>
+<li><a href="/turniry.html" title="РўСѓСЂРЅРёСЂС‹">РўСѓСЂРЅРёСЂС‹</a></li>
+<li><a href="/sudejsko-inspektorskij-korpus.html" title="РЎСѓРґРµР№СЃРєРѕ-РёРЅСЃРїРµРєС‚РѕСЂСЃРєРёР№ РєРѕСЂРїСѓСЃ">РЎСѓРґРµР№СЃРєРѕ-РёРЅСЃРїРµРєС‚РѕСЂСЃРєРёР№ РєРѕСЂРїСѓСЃ</a></li>
+<li><a href="/media.html" title="РњРµРґРёР°">РњРµРґРёР°</a></li>
+<li><a href="/dokumenty.html" title="Р”РѕРєСѓРјРµРЅС‚С‹">Р”РѕРєСѓРјРµРЅС‚С‹</a></li>
 </ul>
     </div>
     <!-- ################################################################################################ -->
@@ -189,7 +189,7 @@
 <div class="wrapper row5">
   <div id="copyright" class="hoc clear"> 
     <!-- ################################################################################################ -->
-    <p class="fl_left">Copyright &copy; 2018 <a href="/">Федерация Футбола Республики Калмыкия</a></p>
+    <p class="fl_left">Copyright &copy; 2018 <a href="/">Р¤РµРґРµСЂР°С†РёСЏ Р¤СѓС‚Р±РѕР»Р° Р РµСЃРїСѓР±Р»РёРєРё РљР°Р»РјС‹РєРёСЏ</a></p>
     <!-- ################################################################################################ -->
   </div>
 </div>
