--- a/wavefire/index.html
+++ b/wavefire/index.html
@@ -101,10 +101,11 @@ Licence URI: https://www.os-templates.com/template-terms
   <div id="pageintro" class="hoc clear"> 
     <!-- ################################################################################################ -->
     <article>
-      <p>Mauris placerat sem hendrerit</p>
-      <h3 class="heading">Risus aliquam vitae enim</h3>
-      <p>Eu elit lacinia porta in eget risus duis pretium tellus ac odio</p>
-      <footer><a class="btn" href="#">Nulla tristique ipsum <i class="fas fa-angle-right"></i></a></footer>
+      <p>Lieferung von Gepack und Fracht</p>
+      <h3 class="heading">Avia Luggage Service</h3>
+      <p>Wir haben gro?e Erfahrung in der Zustellung von Gepack auf der ganzen Welt. Unsere Kunden vertrauen uns schon seit geraumer Zeit bei der Zustellung ihrer personlichen Sachen.<br>
+Wir holen Ihren Koffer von zu Hause ab und bringen ihn fur Ihren Flug zum Flughafen.</p>
+      <footer><a class="btn" href="unsere-philosophie.html">Detail anzeigen<i class="fas fa-angle-right"></i></a></footer>
     </article>
     <!-- ################################################################################################ -->
   </div>
