--- a/wavefire/index.html
+++ b/wavefire/index.html
@@ -112,6 +112,19 @@ Wir nehmen einen Koffer von zu Hause und bringen ihn für Ihren Flug zum Flughaf
 </div>
 <!-- ################################################################################################ -->
 <!-- ################################################################################################ -->
+<div class="wrapper row2">
+  <section class="hoc container clear"> 
+    <!-- ################################################################################################ -->
+    <div class="sectiontitle">
+      <h6 class="heading">Kontaktieren Sie uns oder hinterlassen Sie eine Anfrage</h6>
+      <p>Rufen Sie uns an, senden Sie uns eine E-Mail-Anfrage oder senden Sie uns eine Anfrage hier - unsere Experten werden Sie ausführlich über alle Fragen im Zusammenhang mit der Lieferung Ihrer persönlichen Immobilie informieren.</p>
+    </div>
+    <p class="center"><a class="btn" href="#">Senden Sie eine Anfrage von der Website <i class="fas fa-angle-right"></i></a></p>
+    <!-- ################################################################################################ -->
+  </section>
+</div>
+<!-- ################################################################################################ -->
+<!-- ################################################################################################ -->
 <div class="wrapper row4">
   <footer id="footer" class="hoc clear"> 
     <!-- ################################################################################################ -->
